# shitbot

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  admins.txt  blacklist.txt  commands.txt
include/: channel.hpp  channelitems.hpp  channels.hpp  connhandler.hpp  eventqueue.hpp  ircconnection.hpp  itemincrements.hpp  items.hpp  utilities.hpp
src/: channel.cpp  channelitems.cpp  channels.cpp  connhandler.cpp  ircconnection.cpp  itemincrements.cpp  items.cpp  main.cpp  main2.cpp  utilities.cpp
src/unused - items/: channelitems.cpp  channels.cpp  itemincrements.cpp
